# Tetris

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
glad/: cmake_uninstall.cmake
glad/.build/: cmake_uninstall.cmake
glad/src/: gl.h
include/: common.h  constants.h  cube.h  game.h  gameobject.h  renderer.h  resource_manager.h  shader.h  sprite_renderer.h  tetromino.h  text_renderer.h  texture.h
shaders/: fragment330.glsl  vertex330.glsl
src/: cube.cc  game.cc  gameobject.cc  main.cc  renderer.cc  resource_manager.cc  shader.cc  sprite_renderer.cc  tetromino.cc  text_renderer.cc  texture.cc
