cmake_minimum_required(VERSION 3.10)
project(Tetris VERSION 0.1)
add_executable(Tetris src/main.cc src/cube.cc src/game.cc src/shader.cc src/renderer.cc)
add_library(glad glad/src/gl.c)
include_directories(~/Projects/Tetris/glad/include glfw-3.3.8/deps include)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(glfw-3.3.8)
target_link_libraries(Tetris glfw glad)